# cmd/orchestrator/docs/swagger.json
@@ -5,7 +5,41 @@
         "contact": {}
     },
     "paths": {
-        "/albums": {
+        "/aws2k8s": {
+            "post": {
+                "description": "Triggers a run of the AWS2K8s Job and returns success",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "aws2k8s"
+                ],
+                "summary": "Trigger a run of the AWS2K8s Job",
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            }
+        },
+        "/awsmapping": {
+            "post": {
+                "description": "Triggers a run of the AwsMapping Job and returns success",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "awsmapping"
+                ],
+                "summary": "Trigger a run of the AwsMapping Job",
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            }
+        },
+        "/azure2aws": {
             "post": {
                 "description": "Triggers a run of the Azure2AWS Job and returns success",
                 "produces": [
@@ -16,8 +50,25 @@
                 ],
                 "summary": "Trigger a run of the Azure2AWS Job",
                 "responses": {
-                    "200": {
-                        "description": "OK"
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            }
+        },
+        "/capsvc2azure": {
+            "post": {
+                "description": "Triggers a run of the CapSvc2Azure Job and returns success",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "capsvc2azure"
+                ],
+                "summary": "Trigger a run of the CapSvc2Azure Job",
+                "responses": {
+                    "204": {
+                        "description": "No Content"
                     }
                 }
             }
